# lattice

./: .editorconfig  .env.example  .gitignore  README.md  biome.json  goal.md  handoff.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/api/: pyproject.toml
apps/api/src/lattice_api/: __pyinstaller_entry__.py  auth.py  chat.py  config.py  email.py  indexer.py  main.py  mcp_server.py  modes.py  session.py  watcher.py
apps/api/src/lattice_api/providers/: __init__.py  anthropic.py  llm.py  registry.py  stub_llm.py
apps/api/src/lattice_api/providers/embed/: __init__.py  fastembed_provider.py  hash_provider.py  protocol.py
apps/api/src/lattice_api/routes/: auth.py  chat.py  health.py  mcp_sse.py  notes.py  search.py  suggest.py  sync.py  synthesis.py  vault.py
apps/api/src/lattice_api/storage/: __init__.py  models.py  postgres.py  protocol.py  sqlite.py
apps/api/tests/: conftest.py  test_auth.py  test_backlinks.py  test_e2e.py  test_health.py  test_indexer.py  test_local_tokens.py  test_mcp.py  test_mcp_sse.py  test_notes_rename.py  test_search_and_chat.py  test_suggest_and_capture.py  test_sync.py  test_synthesis.py  test_vault_auto.py  test_vault_init.py
apps/cli/: pyproject.toml
apps/cli/src/lattice_cli/: _local.py  auth.py  main.py
apps/cli/src/lattice_cli/commands/: capture_cmd.py  chat_cmd.py  login_cmd.py  mcp_cmd.py  open_cmd.py  rebuild_cmd.py  search_cmd.py  serve.py  sync_cmd.py  synthesize_cmd.py
apps/cli/tests/: test_cli.py
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build_sidecar.py  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/device/: page.tsx
apps/web/src/app/healthz/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/settings/api/: page.tsx
apps/web/src/app/settings/tokens/: page.tsx
apps/web/src/components/: Breadcrumb.tsx  CaptureModal.tsx  CodeMirrorEditor.tsx  CommandPalette.tsx  FileList.tsx  KeyboardHelp.tsx  NewNoteForm.tsx  SidePanel.tsx  SimpleEditor.tsx  ThemeToggle.tsx  TopBar.tsx  VaultBar.tsx  Welcome.tsx  icons.tsx
apps/web/src/lib/: client.ts  cm-highlight.ts  platform.ts  shortcuts.ts  tauri.ts  theme.tsx  toast.tsx
docs/: architecture.md  mobile.md
infra/: docker-compose.yml
infra/migrations/: 0001_initial.sql  0002_sqlite_local.sql  0003_sqlite_auth_sync.sql  0004_pg_m2.sql
