[project]
name = "lattice-workspace"
version = "0.0.0"
description = "Lattice monorepo workspace root"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api", "apps/cli", "packages/sdk-py"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1.385",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["apps/api/src", "apps/cli/src", "packages/sdk-py/src"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/cli/tests"]
