[project]
name = "lattice-workspace"
version = "0.0.0"
description = "Lattice monorepo workspace root"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api", "apps/cli", "packages/sdk-py"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1.385",
    "httpx>=0.27",
    "pyinstaller>=6.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
# ASYNC240 flags every Path call inside async funcs. In practice our storage
# already wraps blocking work in asyncio.to_thread, and resolving paths
# is microseconds — switching to anyio.path would add a heavy dep for no
# real win. Re-enable if/when we move off blocking sqlite3.
ignore = ["E501", "ASYNC240"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["apps/api/src", "apps/cli/src", "packages/sdk-py/src"]
exclude = ["**/__pycache__", "**/.venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/cli/tests"]
