[project]
name = "lattice-cli"
version = "0.0.0"
description = "Lattice CLI"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.9",
    "keyring>=25.5",
    "lattice-sdk",
    "lattice-api",
]

[project.scripts]
lattice = "lattice_cli.main:cli"

[tool.uv.sources]
lattice-sdk = { workspace = true }
lattice-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice_cli"]
